feat: mqtt map rendering
